--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ body {
 .Frame {
   height: 500px;
   width: 400px;
+  position: relative;
   border: solid thin #6b3101;
   border-radius: 30px;
   font-family: 'Pangolin', cursive;
@@ -30,6 +31,46 @@ body {
   -webkit-box-shadow: 10px 10px 20px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 10px 10px 20px 0px rgba(0,0,0,0.75);
   box-shadow: 10px 10px 20px 0px rgba(0,0,0,0.75);
+}
+
+.modal-hidden {
+  visibility: hidden;
+}
+
+.Modal {
+  position: absolute;
+  z-index: 1;
+}
+
+.Choice {
+  height: 350px;
+  width: 362px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  font-size: 2em;
+}
+
+.XO-buttons {
+  display: flex;
+  flex-direction: row;
+}
+
+.XO {
+  margin: 10px;
+}
+
+button {
+  background: none;
+  border: none;
+  color: inherit;
+  font: inherit;
+  cursor: pointer;
+}
+
+button:hover {
+  outline: dotted;
 }
 
 .Chalkboard {
